# QtLearning

FirstProject/: CMakeLists.txt  Main.qml  Resource.qrc  backendhelper.cpp  backendhelper.h  backendproperty.cpp  backendproperty.h  backendregister.cpp  backendregister.h  main.cpp
LoginForm/: CMakeLists.txt  Fonts.qrc  Icons.qrc  Icons3d.qrc  Logos.qrc  Main.qml  main.cpp
LoginForm/Utils/: CustomButton.qml  CustomCheckbox.qml  CustomInput.qml
MiniProject/: CMakeLists.txt  Icons.qrc  Images.qrc  Main.qml  main.cpp
RegisterForm/: Backgrounds.qrc  CMakeLists.txt  CustomField.qml  Images.qrc  Main.qml  main.cpp
